@@ -15,8 +15,8 @@ import org.springframework.web.client.HttpStatusCodeException;
 import org.springframework.web.client.RestClientException;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.Currency;
+import java.util.List;
 
 import static java.nio.charset.Charset.defaultCharset;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -43,18 +43,18 @@ class ApiClientBalanceRepositoryTest {
         long accountId = 1234567L;
 
         when(fabrikClient.balance(accountId))
-                .thenReturn(
-                        new BalancecFabrikResponse("OK",
-                                null,
-                                new FabrikBalance("2022-11-19", "100.00", "99.00", "USD"))
-                );
+            .thenReturn(
+                new BalancecFabrikResponse("OK",
+                                           null,
+                                           new FabrikBalance("2022-11-19", "100.00", "99.00", "USD"))
+            );
 
         Balance balance = apiClientBalanceRepository.balance(accountId);
 
 
         Balance expectedBalance = new Balance(LocalDate.of(2022, 11, 19),
-                new Amount(9900L, USD),
-                new Amount(10000L, USD));
+                                              new Amount(9900L, USD),
+                                              new Amount(10000L, USD));
         assertEquals(expectedBalance, balance);
     }
 
@@ -63,13 +63,13 @@ class ApiClientBalanceRepositoryTest {
         long accountId = 999L;
 
         when(fabrikClient.balance(accountId))
-                .thenReturn(
-                        new BalancecFabrikResponse("KO",
-                                Arrays.asList(
-                                        new FabrikError("777AE", "An error occurred", "params")
-                                ),
-                                null)
-                );
+            .thenReturn(
+                new BalancecFabrikResponse("KO",
+                                           List.of(
+                                               new FabrikError("777AE", "An error occurred", "params")
+                                           ),
+                                           null)
+            );
 
         assertThrows(InformationUnavailableException.class,
                      () -> apiClientBalanceRepository.balance(accountId));
@@ -80,15 +80,15 @@ class ApiClientBalanceRepositoryTest {
         long accountId = 999L;
 
         doThrow(new FabrikApiException(new RestClientException("something went wrong")))
-                .when(fabrikClient)
-                .balance(accountId);
+            .when(fabrikClient)
+            .balance(accountId);
 
         assertThrows(InformationUnavailableException.class,
                      () -> apiClientBalanceRepository.balance(accountId));
     }
 
     @Test
-    void invalidAccountThrowsAccountNotFound() throws Exception{
+    void invalidAccountThrowsAccountNotFound() throws Exception {
 
         String payload = "{" +
             "    \"status\": \"KO\"," +
@@ -104,7 +104,7 @@ class ApiClientBalanceRepositoryTest {
 
         long accountId = 45235L;
 
-        expectPayload(accountId, payload);
+        expectStatusCodeException(accountId, payload);
 
         assertThrows(AccountNotFoundException.class,
                      () -> apiClientBalanceRepository.balance(accountId));
@@ -126,13 +126,13 @@ class ApiClientBalanceRepositoryTest {
 
         long accountId = 45235L;
 
-        expectPayload(accountId, payload);
+        expectStatusCodeException(accountId, payload);
 
         assertThrows(InformationUnavailableException.class,
                      () -> apiClientBalanceRepository.balance(accountId));
     }
 
-    private void expectPayload(long accountId, String payload) throws FabrikApiException {
+    private void expectStatusCodeException(long accountId, String payload) throws FabrikApiException {
         HttpStatusCodeException e = new HttpClientErrorException(
             HttpStatus.FORBIDDEN,
             "Forbidden",
